--- a/index.html
+++ b/index.html
@@ -4,27 +4,10 @@
 	<title>Memory Game</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/small.css">
 	<script type="text/javascript" src="js/game.js"></script>
 </head>
 <body>
-	<ul>
-		<li card-type="Diamond"></li>
-		<li card-type="Heart"></li>
-		<li card-type="Heart"></li>
-		<li card-type="Heart"></li>
-		<li card-type="Heart"></li>
-		<li card-type="Heart"></li>
-		<li card-type="Heart"></li>
-		<li card-type="Heart"></li>
-		<li card-type="Heart"></li>
-		<li card-type="Heart"></li>
-		<li card-type="Heart"></li>
-		<li card-type="Heart"></li>
-		<li card-type="Heart"></li>
-		<li card-type="Heart"></li>
-		<li card-type="Heart"></li>
-		<li card-type="Heart"></li>
-	</ul>
 
 
 
