center ul, and text

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<script type="text/javascript" src="js/game.js"></script>
 </head>
 <body>
+	<section id="counter"><strong>Moves Made: </strong>0</section><a id="resetBtn" href="" >Reset</a>
 
 
 
