--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 	<script type="text/javascript" src="js/game.js"></script>
 </head>
 <body>
-	<section id="counter"><strong>Moves Made: </strong>0</section><a id="resetBtn" href="" >Reset</a>
-
-
-
-
-
+	<section id="counter">
+		<strong>Moves Made: </strong>0
+	</section>
+	<a id="resetBtn" href="">Reset</a>
+	<section id="starContainer">
+		<p class="fa fa-star"></p>
+		<p class="fa fa-star"></p>
+		<p class="fa fa-star"></p>
+	</section>
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
